--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,8 @@
         "titleBar.inactiveBackground": "#12b89199",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#12b891"
+    "peacock.color": "#12b891",
+    "python.analysis.extraPaths": [
+        "./Kode"
+    ]
 }
